{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player1",
            "id": "f5941780-3674-4013-9330-d062fdf158c5",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "999d6625-a08d-42cc-a687-bfb8bc5a8ba4",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "07d60eaf-2c7e-46d8-8306-6e521b6d202b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Kick",
                    "type": "Button",
                    "id": "88e6478a-9b06-42ac-b05e-4200334ffa68",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Suck",
                    "type": "Button",
                    "id": "182e053b-5e6b-4952-9cb0-8d9b4acf47b8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e35e1589-280d-428c-bbfd-4344d1e76292",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b2cc139-24cb-46ff-8543-a633f4241038",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f5d41b0-5e5b-489f-b263-5594902d7162",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24732431-0bb3-4de0-92c9-f5cefda88197",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Kick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "229a5a7d-4d10-4f13-9b4b-bd9624ec9c32",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Suck",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2",
            "id": "9d4d34e7-27d8-4e9e-b23c-ac7b99a087db",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "fff3d829-c3c9-4ec0-a974-b9ac72c37373",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "3ea2b7a5-c764-4ab0-8c9b-f79af9200766",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Kick",
                    "type": "Button",
                    "id": "cbfecccf-c4fb-4d70-8b53-9831cc82a852",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Suck",
                    "type": "Button",
                    "id": "595b9a6e-f55b-49a5-83ea-2a04e707ac66",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2d9c2e44-9914-4f79-b950-b04c280f65af",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82bf21c7-a5d6-48ba-b7c7-237853b46d79",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "529f6c28-64f6-4635-b19f-2a1757648b6c",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ccd4a65-2cd4-4649-b186-127873e6cf00",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Kick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e64d40a-b3dc-415d-92f8-dbbf1377ccac",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Suck",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}